# my-repository

./: .gitmodules
laba2/: CMakeLists.txt
laba2/include/: util.h
laba2/src/: main.cpp  util.cpp
laba3/: catch.hpp  chisl_proizv.cpp  tests
laba3.1/: catch_tests  catch_tests.cpp  demo  demo.cpp  gtest_tests  gtest_tests.cpp  numerical_derivatives.h  simple_gtest.h
laba3.2/: CMakeLists.txt
laba3.2/include/: derivative.cpp  derivative.h
laba3.2/src/: main.cpp
laba3.2/tests/: CMakeLists.txt  tests_catch2.cpp  tests_google.cpp
laba4/: CMakeLists.txt
laba4/include/: iomanip.hpp
laba4/tests/: iomanip.cpp
laba5/: CMakeLists.txt
laba5/include/: proxy.hpp
laba5/tests/: proxy.cpp
laba6/: CMakeLists.txt
laba6/include/: iterator.hpp
laba6/tests/: iterator.cpp
laba8/include/: json.hpp
labaMOCOS/other_files/: fixed_length_benchmark.csv  performance_data.csv  variable_length_benchmark.csv
labaMOCOS/src/: convolution_benchmark  convolution_benchmark.cpp  direct_convolution  direct_convolution.cpp  fft.hpp  fft_app  fft_convolution  fft_convolution.cpp  fixed_length_benchmark.csv  generate_and_compare.py  generate_convolution_data.py  generate_large_conv_data.py  main.cpp  main1.cpp  performance_data.csv  performance_tester  performance_tester.cpp  plot_convolution_benchmarks.py  plot_performance.py  signal.py  variable_length_benchmark.csv  verifier  verify_convolutions  verify_convolutions.cpp
labaMOCOS/srcpy/: generate_and_compare.py  generate_convolution_data.py  generate_large_conv_data.py  plot_convolution_benchmarks.py  plot_performance.py  signal.py
